# bar-search-app

./: .env.example  .gitignore  CLAUDE.md  MIGRATE_TO_NEW_REPO.md  README.md  SETUP_GUIDE.md  Taskfile.yml  docker-compose.yml  setup.ps1  setup.sh
.claude/: settings.local.json
.github/workflows/: deploy.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: bars.py  favorites.py  images.py  reviews.py  users.py
backend/app/core/: config.py  database.py  storage.py
backend/app/dependencies/: __init__.py  auth.py
backend/app/models/: __init__.py  bar.py  base.py  favorite.py  profile.py  review.py
backend/app/schemas/: __init__.py  bar.py  base.py  favorite.py  image.py  profile.py  review.py
backend/app/services/: __init__.py  bar_service.py  favorite_service.py  review_service.py  user_service.py
backend/scripts/: 01_seed_profiles.py  02_seed_bars.py  03_seed_reviews.py  04_seed_favorites.py  README.md  __init__.py  run_seed.py  seed_config.py
backend/tests/: conftest.py  test_bars_api.py  test_favorites_api.py  test_reviews_api.py  test_users_api.py
docs/: DEPLOYMENT.md  GOOGLE_SSO_SETUP.md  X_SSO_SETUP.md  api_design.md  api_specification.yaml  database_schema.md  database_setup_guide.md  environment_setup.md  functional_requirements.md  project_structure.md  requirements.md  setup_guide.md  supabase_migration.sql  supabase_storage_setup.md
frontend/: .dockerignore  Dockerfile  README.md  biome.json  next.config.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
frontend/__tests__/: README.md
frontend/__tests__/components/: BarCard.test.tsx  FavoriteButton.test.tsx  LoginForm.test.tsx  ReviewCard.test.tsx  SignupForm.test.tsx
frontend/__tests__/stores/: authStore.test.ts
frontend/app/: clarity.tsx  globals.css  layout.tsx  page.tsx
frontend/app/bars/: page.tsx
frontend/app/favorites/: page.tsx
frontend/app/profile/: page.tsx
frontend/components/: AgeGate.tsx  AvatarUpload.tsx  BarCard.tsx  BarList.tsx  BarSearchFilter.tsx  FavoriteButton.tsx  Header.tsx  ImageUpload.tsx  LoginForm.tsx  ReviewCard.tsx  ReviewForm.tsx  SignupForm.tsx
frontend/lib/: api.ts  auth.ts  hooks.ts  supabase.ts  types.ts
frontend/public/: .gitkeep
(+32 files in other folders)
